--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "trading bot written in CoffeeScript",
   "main": "coffeebot.coffee",
   "dependencies": {
+    "chalk": "^2.0.1",
     "lodash": "^4.17.4"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "coffee coffeebot.coffee",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
